--- a/Stock/Stock.Web/Stock.Web.csproj
+++ b/Stock/Stock.Web/Stock.Web.csproj
@@ -560,6 +560,7 @@
     <Content Include="Content\layui\font\iconfont.woff" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Main.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
