--- a/Stock/Stock.Web/Stock.Web.csproj
+++ b/Stock/Stock.Web/Stock.Web.csproj
@@ -561,6 +561,7 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Main.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\User\List.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
